--- a/.github/workflows/security-validation.yml
+++ b/.github/workflows/security-validation.yml
@@ -21,7 +21,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm ci --legacy-peer-deps
 
     - name: Security Audit
       run: npm audit --audit-level=high
