--- a/package.json
+++ b/package.json
@@ -36,6 +36,24 @@
     "db:seed": "tsx prisma/seed.ts",
     "db:reset": "npx prisma db push --force-reset && npm run db:seed",
     "db:studio": "npx prisma studio",
+    "test:oauth-setup": "tsx scripts/email-testing/oauth-setup.ts setup",
+    "test:oauth-callback": "tsx scripts/email-testing/oauth-setup.ts callback",
+    "test:send-email": "tsx scripts/email-testing/email-sender.ts single",
+    "test:send-bulk-emails": "tsx scripts/email-testing/email-sender.ts bulk",
+    "test:truncate-all": "tsx scripts/email-testing/data-manager.ts truncate-all",
+    "test:truncate-db": "tsx scripts/email-testing/data-manager.ts truncate-db",
+    "test:truncate-s3": "tsx scripts/email-testing/data-manager.ts truncate-s3",
+    "test:cleanup": "tsx scripts/email-testing/data-manager.ts cleanup",
+    "test:reset-account": "tsx scripts/email-testing/data-manager.ts reset-account",
+    "test:query-emails": "tsx scripts/email-testing/data-manager.ts query-emails",
+    "test:check-s3": "tsx scripts/email-testing/data-manager.ts check-s3",
+    "test:setup-webhook": "tsx scripts/email-testing/webhook-tester.ts setup",
+    "test:stop-webhook": "tsx scripts/email-testing/webhook-tester.ts stop",
+    "test:validate-webhook": "tsx scripts/email-testing/webhook-tester.ts test",
+    "test:check-webhook-subscription": "tsx scripts/email-testing/webhook-tester.ts validate",
+    "test:email-complete": "tsx scripts/email-testing/master-test.ts complete",
+    "test:email-smoke": "tsx scripts/email-testing/master-test.ts smoke",
+    "test:email-setup": "tsx scripts/email-testing/master-test.ts setup",
     "postinstall": "prisma generate"
   },
   "prisma": {
@@ -44,6 +62,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@aws-sdk/client-cloudwatch-logs": "^3.821.0",
+    "@aws-sdk/client-s3": "^3.840.0",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
     "@supabase/supabase-js": "^2.39.0",
@@ -51,6 +70,7 @@
     "@types/uuid": "^10.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
+    "googleapis": "^150.0.1",
     "next": "15.4.0-canary.51",
     "next-auth": "^4.24.11",
     "pg": "^8.16.0",
