feat: Enhanced email processing with OAuth session tracking and database cleanup
- Added OAuth session tracking with OAuthSession model
- Implemented historical email ingestion functionality
- Enhanced email testing infrastructure with bidirectional communication
- Added comprehensive webhook flow testing
- Cleaned up placeholder OAuth accounts from database
- Added S3 email storage integration
- Implemented Gmail email fetcher with proper error handling
- Enhanced logging and monitoring throughout email processing pipeline
- Added scripts for connecting Gmail to projects and managing test data
- Updated documentation with testing strategies and implementation plans
- Added credentials directory to .gitignore for security

This resolves the OAuthAccountNotLinked issue by removing placeholder accounts
and implementing proper OAuth session management.

--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "test:oauth-callback": "tsx scripts/email-testing/oauth-setup.ts callback",
     "test:send-email": "tsx scripts/email-testing/email-sender.ts single",
     "test:send-bulk-emails": "tsx scripts/email-testing/email-sender.ts bulk",
+    "test:send-conversations": "tsx scripts/email-testing/email-sender.ts conversation",
+    "test:send-homeowner-reply": "tsx scripts/email-testing/email-sender.ts homeowner-reply",
     "test:truncate-all": "tsx scripts/email-testing/data-manager.ts truncate-all",
     "test:truncate-db": "tsx scripts/email-testing/data-manager.ts truncate-db",
     "test:truncate-s3": "tsx scripts/email-testing/data-manager.ts truncate-s3",
+    "test:setup-project": "tsx scripts/email-testing/data-manager.ts setup-test-project",
     "test:cleanup": "tsx scripts/email-testing/data-manager.ts cleanup",
     "test:reset-account": "tsx scripts/email-testing/data-manager.ts reset-account",
     "test:query-emails": "tsx scripts/email-testing/data-manager.ts query-emails",
@@ -54,6 +57,13 @@
     "test:email-complete": "tsx scripts/email-testing/master-test.ts complete",
     "test:email-smoke": "tsx scripts/email-testing/master-test.ts smoke",
     "test:email-setup": "tsx scripts/email-testing/master-test.ts setup",
+    "test:email-historical": "tsx scripts/email-testing/master-test.ts historical",
+    "test:historical-discover": "tsx scripts/email-testing/historical-ingestion.ts discover",
+    "test:historical-import": "tsx scripts/email-testing/historical-ingestion.ts import",
+    "test:historical-scenarios": "tsx scripts/email-testing/historical-ingestion.ts scenarios",
+    "test:webhook-s3-complete": "tsx scripts/email-testing/webhook-s3-tester.ts complete",
+    "test:webhook-s3-simulation": "tsx scripts/email-testing/webhook-s3-tester.ts simulation",
+    "test:webhook-s3-cleanup": "tsx scripts/email-testing/webhook-s3-tester.ts cleanup",
     "postinstall": "prisma generate"
   },
   "prisma": {
@@ -62,7 +72,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@aws-sdk/client-cloudwatch-logs": "^3.821.0",
-    "@aws-sdk/client-s3": "^3.840.0",
+    "@aws-sdk/client-s3": "^3.842.0",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
     "@supabase/supabase-js": "^2.39.0",
@@ -70,6 +80,7 @@
     "@types/uuid": "^10.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
+    "dotenv": "^17.0.1",
     "googleapis": "^150.0.1",
     "next": "15.4.0-canary.51",
     "next-auth": "^4.24.11",
