Enhanced Email Processing with OAuth Session Tracking and Database Cleanup (#33)
* feat: Enhanced email processing infrastructure - Week 2 deliverables complete

* ✨ feat: Complete email testing infrastructure

🧪 Email Testing Playbook & Dev Utilities:
- Gmail test accounts: nailit.test.homeowner@gmail.com & nailit.test.contractor@gmail.com
- OAuth setup utility for programmatic email sending
- Email sender with realistic contractor templates (cost changes, delays, substitutions)
- Data manager for PostgreSQL + S3 cleanup and validation
- Webhook tester for real-time Gmail push notifications
- Master test workflows for complete validation

📧 Test Email Templates:
- Cost change notifications with dollar amounts
- Schedule delay updates with date impacts
- Material substitution requests with attachments
- Urgent issues requiring immediate attention
- Invoice emails with PDF attachments

🗄️ Data Storage Testing:
- PostgreSQL EmailMessage ingestion validation
- S3 attachment upload/download testing
- Bulk historical email generation (50+ emails over 30+ days)
- Real-time webhook processing (sub-30 second validation)
- Complete truncate/reset workflows for fresh testing

🔧 NPM Scripts Added:
- npm run test:oauth-setup <contractor|homeowner>
- npm run test:send-email <template>
- npm run test:send-bulk-emails <count> <days_back>
- npm run test:truncate-all (PostgreSQL + S3)
- npm run test:setup-webhook & test:validate-webhook
- npm run test:email-complete (full workflow)
- npm run test:email-smoke (quick validation)

This provides comprehensive email ingestion testing for both historical bulk processing and real-time webhook scenarios as requested.

* feat: Enhanced email processing with OAuth session tracking and database cleanup

- Added OAuth session tracking with OAuthSession model
- Implemented historical email ingestion functionality
- Enhanced email testing infrastructure with bidirectional communication
- Added comprehensive webhook flow testing
- Cleaned up place

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,9 @@ yarn-error.log*why
 gmail-contractor-credentials.json
 gmail-contractor-tokens.json
 
+# Email testing credentials directory
+scripts/email-testing/credentials/
+
 # vercel
 .vercel
 
