🧪 Complete automated email testing infrastructure
✅ ACHIEVEMENTS:
- Resolved Gmail deletion permissions issue using trash method
- Generated comprehensive test dataset (49 emails across both accounts)
- Implemented automated testing workflows with safe cleanup
- Created realistic conversation threads and historical patterns
- Updated documentation with complete testing procedures

🔧 TECHNICAL IMPROVEMENTS:
- Gmail cleanup now uses trash method (works with gmail.modify scope)
- Conversation thread generation with proper email relationships
- Bulk historical email generation with realistic timing
- Rate-limited operations respecting Gmail API quotas
- CI/CD-ready automation scripts

📊 CURRENT TEST DATA:
- 25 emails in contractor account
- 24 emails in homeowner account
- 5 conversation threads with realistic timing
- 10 historical emails distributed over 60 days
- Mix of email types: cost changes, schedules, urgent issues, invoices

📖 DOCUMENTATION UPDATES:
- Enhanced EMAIL_TESTING_PLAYBOOK.md with automated workflows
- Updated REALISTIC_EMAIL_TESTING_REQUIREMENTS.md with current status
- Added comprehensive command reference and troubleshooting
- Documented conversation thread testing capabilities

🚀 READY FOR: Email ingestion testing, webhook validation, timeline reconstruction, performance benchmarking

--- a/package.json
+++ b/package.json
@@ -35,6 +35,18 @@
     "test:gmail:setup": "tsx scripts/gmail-oauth-setup.ts",
     "test:gmail:token": "tsx scripts/gmail-token-exchange.ts",
     "test:gmail:auth": "tsx scripts/test-gmail-auth.ts",
+    "test:emails:realistic": "tsx scripts/email-testing/realistic-email-generator.ts",
+    "test:emails:data": "tsx scripts/email-testing/data-manager.ts",
+    "test:emails:cleanup": "tsx scripts/email-testing/data-manager.ts truncate-all",
+    "test:emails:setup-single-contractor": "tsx scripts/email-testing/data-manager.ts setup-single-contractor-project",
+    "test:gmail:cleanup": "tsx scripts/email-testing/gmail-inbox-cleaner.ts",
+    "test:gmail:cleanup-preview": "tsx scripts/email-testing/gmail-inbox-cleaner.ts preview",
+    "test:gmail:cleanup-all": "tsx scripts/email-testing/gmail-inbox-cleaner.ts trash-all",
+    "test:gmail:cleanup-recent": "tsx scripts/email-testing/gmail-inbox-cleaner.ts trash-recent",
+    "test:send-email": "tsx scripts/email-testing/email-sender.ts",
+    "test:oauth-setup": "tsx scripts/email-testing/oauth-setup.ts setup",
+    "test:oauth-callback": "tsx scripts/email-testing/oauth-setup.ts callback",
+    "test:oauth-status": "tsx scripts/email-testing/oauth-setup.ts status",
     "lint:check": "next lint --max-warnings 0",
     "lint:ci": "next lint --max-warnings 20",
     "type-check": "tsc --noEmit",
