feat: enhance email testing with bidirectional conversation validation
- Create conversation-validator.ts to ensure authentic contractor-homeowner conversations
- Enhanced email-sender.ts with guaranteed bidirectional flow patterns
- Added proper 'Re:' threading for Gmail conversation grouping
- Implemented realistic response timing (2-48 hours between messages)
- Added conversation quality validation with 5 key metrics
- Updated package.json with test:validate-conversations script
- Enhanced documentation with conversation patterns and quality standards
- Enforced authentic content patterns for contractor/homeowner communication
- Added conversation quality scoring (target: 80%+ with 4/5 checks passing)

CRITICAL REQUIREMENT: All test data must contain authentic bidirectional
conversations with proper threading, realistic timing, and authentic content
patterns that mirror real contractor-homeowner project communication.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "test:oauth-setup": "tsx scripts/email-testing/oauth-setup.ts setup",
     "test:oauth-callback": "tsx scripts/email-testing/oauth-setup.ts callback",
     "test:oauth-status": "tsx scripts/email-testing/oauth-setup.ts status",
+    "test:validate-conversations": "tsx scripts/email-testing/conversation-validator.ts validate",
     "lint:check": "next lint --max-warnings 0",
     "lint:ci": "next lint --max-warnings 20",
     "type-check": "tsc --noEmit",
