Complete Gmail threading implementation and documentation
- Fix Gmail threading by ensuring consistent subject lines (no '- Update' suffixes)
- Add comprehensive code documentation with JSDoc comments
- Enhance email-sender.ts with detailed threading logic explanations
- Update EMAIL_TESTING_PLAYBOOK.md with corrected threading patterns
- Update TEAM_MEMBER_FILTERING.md with current implementation status
- Create EMAIL_TESTING_IMPLEMENTATION_SUMMARY.md with complete overview
- Achieve 80% conversation quality score (4/5 checks passed)
- Implement proper cross-account threading between contractor/homeowner
- Maintain Gmail API only principle (no direct database writes)
- Add detailed RFC 2822 header documentation and base64url encoding notes

--- a/package.json
+++ b/package.json
@@ -43,10 +43,14 @@
     "test:gmail:cleanup-preview": "tsx scripts/email-testing/gmail-inbox-cleaner.ts preview",
     "test:gmail:cleanup-all": "tsx scripts/email-testing/gmail-inbox-cleaner.ts trash-all",
     "test:gmail:cleanup-recent": "tsx scripts/email-testing/gmail-inbox-cleaner.ts trash-recent",
-    "test:send-email": "tsx scripts/email-testing/email-sender.ts",
+    "test:send-email": "tsx scripts/email-testing/email-sender.ts single",
+    "test:send-bulk-emails": "tsx scripts/email-testing/email-sender.ts bulk",
+    "test:send-conversations": "tsx scripts/email-testing/email-sender.ts conversation",
+    "test:send-homeowner-reply": "tsx scripts/email-testing/email-sender.ts homeowner-reply",
     "test:oauth-setup": "tsx scripts/email-testing/oauth-setup.ts setup",
     "test:oauth-callback": "tsx scripts/email-testing/oauth-setup.ts callback",
     "test:oauth-status": "tsx scripts/email-testing/oauth-setup.ts status",
+    "test:oauth-refresh": "tsx scripts/email-testing/oauth-setup.ts refresh",
     "test:validate-conversations": "tsx scripts/email-testing/conversation-validator.ts validate",
     "lint:check": "next lint --max-warnings 0",
     "lint:ci": "next lint --max-warnings 20",
