refactor: abstract email processing from homeowner-only to user-centric architecture
- Refactor TeamMemberFilter to use proper production abstractions
- Replace homeowner-specific terminology with user-centric language
- Support extensible user types (homeowner, contractor, architect, etc.)
- Maintain same filtering logic but with flexible user roles
- Clarify testing constraints vs production architecture
- Update documentation to separate testing environment from production
- Preserve email ingestion patterns while enabling future product strategy
- Add validation for user-agnostic email processing

This change maintains all existing functionality while making the codebase
extensible for future UX refinements supporting contractors, architects, and
other user types as primary users.

--- a/package.json
+++ b/package.json
@@ -40,18 +40,22 @@
     "test:emails:cleanup": "tsx scripts/email-testing/data-manager.ts truncate-all",
     "test:emails:setup-single-contractor": "tsx scripts/email-testing/data-manager.ts setup-single-contractor-project",
     "test:gmail:cleanup": "tsx scripts/email-testing/gmail-inbox-cleaner.ts",
-    "test:gmail:cleanup-preview": "tsx scripts/email-testing/gmail-inbox-cleaner.ts preview",
-    "test:gmail:cleanup-all": "tsx scripts/email-testing/gmail-inbox-cleaner.ts trash-all",
+    "test:gmail:cleanup-preview": "npx tsx scripts/email-testing/gmail-inbox-cleaner.ts preview",
+    "test:gmail:cleanup-all": "npx tsx scripts/email-testing/gmail-inbox-cleaner.ts cleanup",
     "test:gmail:cleanup-recent": "tsx scripts/email-testing/gmail-inbox-cleaner.ts trash-recent",
-    "test:send-email": "tsx scripts/email-testing/email-sender.ts single",
-    "test:send-bulk-emails": "tsx scripts/email-testing/email-sender.ts bulk",
-    "test:send-conversations": "tsx scripts/email-testing/email-sender.ts conversation",
+    "test:send-email": "npx tsx scripts/email-testing/email-sender.ts",
+    "test:send-bulk-emails": "npx tsx scripts/email-testing/email-sender.ts bulk",
+    "test:send-conversations": "npx tsx scripts/email-testing/realistic-email-generator.ts conversations",
     "test:send-homeowner-reply": "tsx scripts/email-testing/email-sender.ts homeowner-reply",
     "test:oauth-setup": "tsx scripts/email-testing/oauth-setup.ts setup",
     "test:oauth-callback": "tsx scripts/email-testing/oauth-setup.ts callback",
     "test:oauth-status": "tsx scripts/email-testing/oauth-setup.ts status",
     "test:oauth-refresh": "tsx scripts/email-testing/oauth-setup.ts refresh",
-    "test:validate-conversations": "tsx scripts/email-testing/conversation-validator.ts validate",
+    "test:validate-conversations": "npx tsx scripts/email-testing/conversation-validator.ts",
+    "test:validate-homeowner-only": "npx tsx scripts/validate-homeowner-only.ts",
+    "test:historical-discover": "npx tsx scripts/email-testing/historical-ingestion.ts discover",
+    "test:historical-import": "npx tsx scripts/email-testing/historical-ingestion.ts import",
+    "test:historical-scenarios": "tsx scripts/email-testing/historical-ingestion.ts scenarios",
     "lint:check": "next lint --max-warnings 0",
     "lint:ci": "next lint --max-warnings 20",
     "type-check": "tsc --noEmit",
